# smtp-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  go.mod  go.sum  main.go
.github/workflows/: fly-deploy.yml
client/: inbox.html  inbox.js  index.html  login.js
config/: config.go
db/: db.go  service.go
migrations/: migration.go
pkg/models/: email.go
pkg/services/email/: postgres.go  repository.go  services.go
services/: smtp.go
src/: database.rs  main.go  main.rs  main_test.go  smtp.go  smtp.rs
src/backend/: backend.go
src/controllers/: mail.controller.go
src/models/: mail.model.go
src/services/: smtp.go
src/session/: session.go
tests/: test.py
utils/: util.go
views/: view.go
