[package]
name = "haxmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = "*"
libsql-client = { version = "*", default-features = false, features = [
    "local_backend",
    "reqwest_backend",
] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
hashbrown = "*"
