[package]
name = "haxmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = "*"
reqwest = { version = "0.11.14", optional = true, default-features = false, features = [
    "rustls-tls",
] }
serde_json = "1.0.91"
libsql-client = { version = "0.26.1", default-features = false, features = [
    "local_backend",
    "reqwest_backend",
] }
tokio = { version = "*", features = ["full"] }
tracing = "0.1.37"
#8 tracing-subscriber = "0.2.16"
hashbrown = "0.8.0"
dotenv = "0.15.0"
